--- a/src/components/PageHeader/styles.css
+++ b/src/components/PageHeader/styles.css
@@ -29,14 +29,23 @@
 }
 
 .page-header .header-content  strong {
- font: 700 3.6rem Archivo;
+ font: 700 3.3rem Archivo;
  line-height: 4.2rem;
  color: var(--color-title-in-primary)
 }
 
+.page-header .header-content  p {
+  max-width: 30rem;
+  font-size: 1.6rem;
+  line-height: 2.6rem;
+  color: var(--color-text-in-primary);
+  margin-top: 2.4rem;
+ }
+ 
+
 @media (min-width: 700px) {
   .page-header {
-    height: 250px;
+    height: 300px;
   }
   .page-header .top-bar-container {
     max-width: 1100px;
